# FCS-GPU

./: .clang-format  .gitignore  README.md  ReadmeBNL-IC.txt  ReadmeCori.txt  readme_omp_rng.md  submit.sh
FastCaloSimAnalyzer/: CMakeLists.txt  README.md  setup.sh
FastCaloSimAnalyzer/CLHEP/Random/: RandFlat.cxx  RandFlat.h  RandGauss.cxx  RandGauss.h  RandPoisson.cxx  RandomEngine.cxx  RandomEngine.h  TRandomEngine.cxx  TRandomEngine.h
FastCaloSimAnalyzer/EnergyParametrization/: CMakeLists.txt  README.md
FastCaloSimAnalyzer/EnergyParametrization/scripts/: AtlasStyle.C  AtlasUtils.C  CMakeLists.txt  check_correlations.C  check_energy_high.C  check_layers.C  cleanup.sh  db.txt  energy_plot.C  init_epara.C  low_energy.C  mydb.txt  rootlogon.C  run.C  run_epara.C  setup_root608.sh  test_inverse.C
FastCaloSimAnalyzer/EnergyParametrization/src/: CMakeLists.txt  EnergyParametrizationValidation.cxx  EnergyParametrizationValidation.h  EnergyParametrizationValidation_cxx.d  EnergyParametrizationValidation_cxx_ACLiC_dict_rdict.pcm  LinkDef.h  TFCS1DFunctionFactory.cxx  TFCS1DFunctionFactory.h  TFCS1DFunctionFactory_cxx.d  TFCS1DFunctionFactory_cxx_ACLiC_dict_rdict.pcm  TFCS1DRegression.cxx  TFCS1DRegression.h  TFCS1DRegression_cxx.d  TFCS1DRegression_cxx_ACLiC_dict_rdict.pcm  TFCSApplyFirstPCA.cxx  TFCSApplyFirstPCA.h  TFCSApplyFirstPCA_cxx.d  TFCSApplyFirstPCA_cxx_ACLiC_dict_rdict.pcm  TFCSEnergyParametrizationPCABinCalculator.cxx  TFCSEnergyParametrizationPCABinCalculator.h  TFCSEnergyParametrizationPCABinCalculator_cxx.d  TFCSEnergyParametrizationPCABinCalculator_cxx_ACLiC_dict_rdict.pcm  TFCSMakeFirstPCA.cxx  TFCSMakeFirstPCA.h  TFCSMakeFirstPCA_cxx.d  TFCSMakeFirstPCA_cxx_ACLiC_dict_rdict.pcm  TreeReader.cxx  TreeReader.h  TreeReader_cxx.d  TreeReader_cxx_ACLiC_dict_rdict.pcm  firstPCA.cxx  firstPCA.h  secondPCA.cxx  secondPCA.h  secondPCA_cxx.d  secondPCA_cxx_ACLiC_dict_rdict.pcm
FastCaloSimAnalyzer/FastCaloGpu/: Readme.kernels
FastCaloSimAnalyzer/FastCaloGpu/FastCaloGpu/: AlpakaDefs.h  Args.h  Atomic_Double.h  CU_BigMem.h  CaloDetDescrElement_g.h  CaloGpuGeneral.h  CaloGpuGeneral_al.h  CaloGpuGeneral_cu.h  CaloGpuGeneral_g.h  CaloGpuGeneral_kk.h  CaloGpuGeneral_omp.h  CaloGpuGeneral_sp.h  CountingIterator.h  DEV_BigMem.h  FH_structs.h  FH_views.h  GeoGpu_structs.h  GeoLoadGpu.h  GeoLoadGpu_g.h  GeoRegion.h  GeoRegion_g.h  GpuGeneral_structs.h  GpuParams.h  Hit.h  Hitspy_Hist.h  HostDevDef.h  Identifier.h  Identifier_g.h  LoadGpuFuncHist.h  LoadGpuFuncHist_g.h  OMP_BigMem.h  Rand4Hits.h  TestStdPar.h  gpuQ.h  (+1 more)
FastCaloSimAnalyzer/FastCaloSimAnalyzer/: CaloGeometryFromFile.h  FCS_Cell.h  KernelTime.h  TFCS2DParametrization.h  TFCSAnalyzerBase.h  TFCSAnalyzerHelpers.h  TFCSEnergyInterpolation.h  TFCSFlatNtupleMaker.h  TFCSHistoLateralShapeParametrization.h  TFCSHistoLateralShapeParametrizationFCal.h  TFCSHitCellMappingWiggle.h  TFCSInputValidationPlots.h  TFCSLateralShapeParametrizationHitChain.h  TFCSShapeValidation.h  TFCSSimulationRun.h  TFCSStdParTest.h  TFCSValidationEnergy.h  TFCSValidationEnergyAndCells.h  TFCSValidationEnergyAndHits.h  TFCSValidationHitSpy.h  TFCSVertexZPositionStudies.h  TFCSWriteCellsToTree.h
FastCaloSimAnalyzer/FastCaloSimCommon/: CMakeLists.txt  README.md
FastCaloSimAnalyzer/FastCaloSycl/: CMakeLists.txt
FastCaloSimAnalyzer/Random/: RandFlat.h  RandPoisson.cxx  RandPoisson.h  TRandomEngine.h
FastCaloSimAnalyzer/Root/: CMakeLists.txt  CaloGeometryFromFile.cxx  LinkDef.h  TFCS2DParametrization.cxx  TFCSAnalyzerBase.cxx  TFCSAnalyzerHelpers.cxx  TFCSEnergyInterpolation.cxx  TFCSFlatNtupleMaker.cxx  TFCSHistoLateralShapeParametrization.cxx  TFCSHistoLateralShapeParametrizationFCal.cxx  TFCSHitCellMappingWiggle.cxx  TFCSInputValidationPlots.cxx  TFCSLateralShapeParametrizationHitChain.cxx  TFCSShapeValidation.cxx  TFCSStdParTest.cxx  TFCSValidationEnergy.cxx  TFCSValidationEnergyAndCells.cxx  TFCSValidationEnergyAndHits.cxx  TFCSValidationHitSpy.cxx  TFCSVertexZPositionStudies.cxx  TFCSWriteCellsToTree.cxx
FastCaloSimAnalyzer/atlasstyle/: AtlasLabels.C  AtlasStyle.C  AtlasStyle.h  AtlasUtils.C  AtlasUtils.h
FastCaloSimAnalyzer/condor_submission/: README.md  db.txt  energy_shape_parametrization_condor_submit.py  initTFCSAnalyzer.C  param_eta_slice_condor_submit.py  runEpara_temp.C  runMeanRZ_temp.C  runParamEtaSlice_temp.C  runShape_temp.C  runTFCS2DParametrizationHistogram.cxx  runZvertexStudies.sh  run_epara.cxx  simpleJob.py  simpleJob.sh  submit_ZVertexStudies.sh  template_ParamEtaSlice_run.sh  template_run.sh  template_submit.sub
FastCaloSimAnalyzer/macro/: CMakeLists.txt  FCS_dsid.cxx  FCS_dsid.h  MakeTFCSEventAnalyzer.cxx  MakeTFCSEventAnalyzerFCal.cxx  MakeTFCSNtupleMaker.cxx  Makefile  WiggleInputs.txt  drawCaloGeometry.C  initCaloGeometry.C  initTFCS2DParametrizationHistogram.C  initTFCSAnalyzer.C  initTFCSShapeValidation.C  initTFCSfunction.C  inputSampleList.txt  mySampleList.txt  run.C  runTFCS2DParametrizationHistogram.cxx  runTFCSAverageShape.cxx  runTFCSCalculateMemory.cxx  runTFCSCreateParamEtaSlice.cxx  runTFCSCreateParametrization.cxx  runTFCSEnergyInterpolationTGraph.C  runTFCSEnergyScan.cxx  runTFCSEnergyShapeParametrizationChain.cxx  runTFCSFunctionTest.cxx  runTFCSMaxHitrz.cxx  runTFCSMaxrz.C  runTFCSMergeParamEtaSlices.cxx  runTFCSShapeValidation.cxx  runTFCSSimulation.cxx  runTFCSStdParTest.cxx  runTFCSTests.cxx  runTFCSWiggleDerivativeHistograms.C  runWiggleAnalysis.C  runZVertexStudies.C  run_epara.cxx  testCaloGeometry.C  testMaxrz.C  testTFCSEnergyInterpolation.C  (+2 more)
FastCaloSimAnalyzer/python/: createSampleLocation.py  inputSampleList.txt
FastCaloSimAnalyzer/scripts/: CreateComparisonLatex.C  CreateElectronComparisonPlots.C  CreateHitEtaPhiPlots.C  CreateHitsGrid.C  CreateLatex.C  CreateRootFile.C  Create_alpha_r_TH1.C  Create_deta_dphi_comparison.C  GetCPUperf.C  GetCellInformation.C  GetLayerPosition.C  PlotEtaPhi2D.C  PlotRMS.C  PlotTTCetaphi.C  PlotTTCetaphiEachLayer.C  SampleFraction.C  TotalEvents.C  runPlotApprovalICHEP.C  runWiggleEfficiencyComparisonPlots.C
FastCaloSimAnalyzer/tests/: test_foo.out
(+440 files in other folders)
